Carroussel les100ciels

--- a/projets.html
+++ b/projets.html
@@ -857,30 +857,34 @@
                                             </a>
                                         </div>
 
-                                        <div id="splideTerrine" class="splide" role="group" aria-label="Splide Basic HTML Example">
+                                        <div id="splideLes100ciels" class="splide" role="group" aria-label="Splide Basic HTML Example">
 
                                         <div class="splide__slider">
                                             <div class="splide__track">
                                                 <ul class="splide__list" style="list-style-type:none;">
                                                     <li class="splide__slide" style="list-style-type:none;">
-                                                        <img src="..\img\demos\screenShots\compressed\terrine1-min.png" class="carouselImgProject isDesktop" />
-                                                        <img src="..\img\demos\screenShots\compressed\mobile\terrine1-min.png" class="carouselImgProject isMobile" />
+                                                        <img src="..\img\demos\screenShots\compressed\les100ciels-png-1.png" class="carouselImgProject isDesktop" />
+                                                        <img src="..\img\demos\screenShots\compressed\mobile\les100ciels-png-1-min.png" class="carouselImgProject isMobile" />
                                                     </li>
                                                     <li class="splide__slide" style="list-style-type:none;">
-                                                        <img src="..\img\demos\screenShots\compressed\terrine2-min.png" class="carouselImgProject isDesktop" />
-                                                        <img src="..\img\demos\screenShots\compressed\mobile\terrine2-min.png" class="carouselImgProject isMobile" />
+                                                        <img src="..\img\demos\screenShots\compressed\les100ciels-png-2.png" class="carouselImgProject isDesktop" />
+                                                        <img src="..\img\demos\screenShots\compressed\mobile\les100ciels-png-2-min.png" class="carouselImgProject isMobile" />
                                                     </li>
                                                     <li class="splide__slide" style="list-style-type:none;">
-                                                        <img src="..\img\demos\screenShots\compressed\terrine3-min.png" class="carouselImgProject isDesktop" />
-                                                        <img src="..\img\demos\screenShots\compressed\mobile\terrine3-min.png" class="carouselImgProject isMobile" />
+                                                        <img src="..\img\demos\screenShots\compressed\les100ciels-png-3.png" class="carouselImgProject isDesktop" />
+                                                        <img src="..\img\demos\screenShots\compressed\mobile\les100ciels-png-3-min.png" class="carouselImgProject isMobile" />
                                                     </li>
                                                     <li class="splide__slide" style="list-style-type:none;">
-                                                        <img src="..\img\demos\screenShots\compressed\terrine4-min.png" class="carouselImgProject isDesktop" />
-                                                        <img src="..\img\demos\screenShots\compressed\mobile\terrine4-min.png" class="carouselImgProject isMobile" />
+                                                        <img src="..\img\demos\screenShots\compressed\les100ciels-png-4.png" class="carouselImgProject isDesktop" />
+                                                        <img src="..\img\demos\screenShots\compressed\mobile\les100ciels-png-4-min.png" class="carouselImgProject isMobile" />
                                                     </li>
                                                     <li class="splide__slide" style="list-style-type:none;">
-                                                        <img src="..\img\demos\screenShots\compressed\terrine5-min.png" class="carouselImgProject isDesktop" />
-                                                        <img src="..\img\demos\screenShots\compressed\mobile\terrine5-min.png" class="carouselImgProject isMobile" />
+                                                        <img src="..\img\demos\screenShots\compressed\les100ciels-png-5.png" class="carouselImgProject isDesktop" />
+                                                        <img src="..\img\demos\screenShots\compressed\mobile\les100ciels-png-5-min.png" class="carouselImgProject isMobile" />
+                                                    </li>
+                                                    <li class="splide__slide" style="list-style-type:none;">
+                                                        <img src="..\img\demos\screenShots\compressed\les100ciels-png-6.png" class="carouselImgProject isDesktop" />
+                                                        <img src="..\img\demos\screenShots\compressed\mobile\les100ciels-png-6-min.png" class="carouselImgProject isMobile" />
                                                     </li>
                                                 </ul>
                                             </div>
@@ -915,7 +919,7 @@
                                         document.addEventListener( 'DOMContentLoaded', function() {
                                             // var splide = new Splide( '.splide' );
                                             // splide.mount();
-                                            var splide = new Splide( '#splideTerrine', {
+                                            var splide = new Splide( '#splideLes100ciels', {
                                                 autoplay: true,
                                                 type: 'loop',
                                                 pauseOnHover: false,
