--- a/projets.html
+++ b/projets.html
@@ -307,7 +307,7 @@
 
                                                     <div class="projectTitle">
                                                         <img src="../img/projects/squadforge.png" class="projectSlideLogo" />
-                                                        <p class="projetSlideTitle projetTitleSF-mobile" style="font-family: 'Julius Sans One', sans-serif;">SquadForge</p>
+                                                        <p class="projetSlideTitle projetTitleSF-mobile" style="color:#ffa012; font-family: 'Julius Sans One', sans-serif;">SquadForge</p>
                                                     </div>
 
                                                     <p class="projetDescriptionText">Plateforme communautaire "Gaming"</p> 
@@ -795,13 +795,13 @@
                                 <div class="gridProjetHeaderContainer description3boxShadow">
 
                                     <div id="iframe4" class="iframe">
-                                        <div class="boutonMockup"></div>
-                                        <div class="boutonMockup2"></div>
-                                        <div class="bouton3Container"><div class="boutonMockup3"></div></div>
-                                        <div class="boutonMockup4"></div>
-                                        <div class="boutonMockup5"></div>
+                                        <div class="boutonMockup boutonIframe-100ciels"></div>
+                                        <div class="boutonMockup2 boutonIframe-100ciels"></div>
+                                        <div class="bouton3Container"><div class="boutonMockup3 boutonIframe-100ciels"></div></div>
+                                        <div class="boutonMockup4 boutonIframe-100ciels"></div>
+                                        <div class="boutonMockup5 boutonIframe-100ciels"></div>
                                     
-                                        <iframe src="https://les100ciels.art" class="iframeElem"></iframe>
+                                        <iframe src="https://les100ciels.art" class="iframeElem iframeElem-100ciels"></iframe>
 
                                         <p class="lienBJJ"><a target="_blank" href="https://les100ciels.art">Voir le site<img src="../img/redirectionOrange.png" class="redirectionPng"></a></p>
                                     </div>
@@ -818,10 +818,10 @@
 
                                                 <h3 class="projetNbr">Projet 4</h3>
 
-                                                <div class="projectTitle projectTitleTerrine">
+                                                <div class="projectTitle projectTitleLes100ciels">
 
                                                     <img src="../img/projects/les100ciels-min.png" class="projectSlideLogo projectSlideLogo4" />
-                                                    <p class="projetSlideTitle" style="">les100ciels</p>
+                                                    <p class="projetSlideTitle" style="color:#e8ca7d;">les100ciels</p>
 
                                                 </div>
 
