--- a/projets.html
+++ b/projets.html
@@ -20,6 +20,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Kavoon&family=Righteous&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
         <!-- Styles -->
         <link rel="stylesheet" type="text/css" href="../css/style.css">
@@ -728,7 +729,7 @@
                                                 <div class="projectTitle projectTitleLes100ciels">
 
                                                     <img src="../img/projects/les100ciels-min.png" class="projectSlideLogo projectSlideLogo4" />
-                                                    <p class="projetSlideTitle" style="color:#e8ca7d;">les100ciels</p>
+                                                    <p class="projetSlideTitle" style="color:#e8ca7d; font-family:'Montserrat', sans-serif; font-weight:300; ">les 100 ciels</p>
 
                                                 </div>
 
@@ -738,9 +739,9 @@
 
                                             <ul class="projetSkillsList">
                                                 <li>HTML</li>
-                                                <li>CSS</li>
+                                                <li class="mainSkill">CSS</li>
                                                 <li>JS</li>
-                                                <li class="mainSkill">PHP</li>
+                                                <li>PHP</li>
                                             </ul>
 
                                             <ul class="projetFuncList projetFuncList-100ciels">
