--- a/cv.html
+++ b/cv.html
@@ -238,12 +238,12 @@
             <div>
                 <h2 id="titleCv" class="cvTitle">
 
-                    <a class="isDesktopInline" href="CV_BasileKuntz_2024_v2.pdf" download="CV_basileKuntz" id="dlCv">
+                    <a class="isDesktopInline" href=".\img\CV BasileKuntz.pdf" download="CV BasileKuntz" id="dlCv">
                         <i class="fa-solid fa-file-arrow-down downloadCvIcon"></i>Télécharger en PDF
                     </a>
 
                     
-                    <a class="isMobile" href="CV_BasileKuntz_2024_v2.pdf" download="CV_basileKuntz" id="dlCv">
+                    <a class="isMobile" href=".\img\CV BasileKuntz.pdf" download="CV BasileKuntz" id="dlCv">
                         <i class="fa-solid fa-file-arrow-down downloadCvIcon"></i> PDF
                     </a>
 
