--- a/candidatures/alsaceweb.html
+++ b/candidatures/alsaceweb.html
@@ -43,6 +43,17 @@
 
 
 
+        <div style="width: 100%;">
+
+            <div class="alsace-web-newCandidatureBtn">
+                <i class="fa-solid fa-envelope-open-text alsace-web-candiIcon"></i>
+                <span>Nouvelle candidature !</span>
+            </div>
+
+        </div>
+
+
+
 
         <script>
 
