WIP candidatures (AW + MCIR)

--- a/candidatures/alsaceweb.html
+++ b/candidatures/alsaceweb.html
@@ -27,7 +27,7 @@
 
         <section class="wrapper" style="top:52px">
 
-            <div class="background-round"></div>
+            <div class="background-round" style="filter: drop-shadow(0px 1px 1px black);"></div>
 
             <svg class="alsacewebSvgContainer">
                 <g class="bonjourSvg">
@@ -45,7 +45,7 @@
 
         <div style="width: 100%;">
 
-            <div class="alsace-web-newCandidatureBtn">
+            <div class="alsace-web-newCandidatureBtn" style="filter: drop-shadow(0px 1px 1px black);">
                 <i class="fa-solid fa-envelope-open-text alsace-web-candiIcon"></i>
                 <span>Nouvelle candidature !</span>
             </div>
